--- a/src/meetup-new-event.html
+++ b/src/meetup-new-event.html
@@ -1,19 +1,119 @@
 <link rel="import" href="../bower_components/polymer/polymer.html">
 <link rel="import" href="../bower_components/paper-dialog/paper-dialog.html">
+<link rel="import" href="../bower_components/paper-button/paper-button.html">
+<link rel="import" href="../bower_components/paper-input/paper-input.html">
+<link rel="import" href="../bower_components/paper-input/paper-textarea.html">
 <link rel="import" href="../bower_components/neon-animation/animations/scale-up-animation.html">
 <link rel="import" href="../bower_components/neon-animation/animations/fade-out-animation.html">
 
 <dom-module id="meetup-new-event">
 	<template>
 		<style>
-			
+			paper-dialog {
+				width: 80vw;
+				max-height: 80vh;
+				overflow: scroll;
+			}
+
+			.long-detail {
+				width: 200px;
+				display: inline-block;
+			}
+
+			.short-detail {
+				width: 100px;
+				display: inline-block;
+			}
+
+			.padded {
+				padding: 20px;
+			}
+
+			#createButton {
+				background-color: var(--secondary-color);
+				color: #fff;
+			}
 		</style>
 
 		<paper-dialog
-			id="dialog"
+			id="newDialog"
 			entry-animation="scale-up-animation"
-			exit-animation="fade-out-animation">
-			<h2>Create a new event</h2>
+			exit-animation="fade-out-animation"
+			no-cancel-on-outside-click>
+			<h2>Create a New Event</h2>
+			<paper-input
+				autofocus
+				class="short-detail"
+				label="Title"
+				required
+				auto-validate
+				error-message="Required"
+				value="{{eventTitle}}">
+			</paper-input>
+			<paper-input
+				class="short-detail"
+				label="Type of Event"
+				required
+				auto-validate
+				error-message="Required"
+				value="{{eventType}}">
+			</paper-input>
+			<paper-input
+				class="short-detail"
+				label="Host"
+				required
+				auto-validate
+				error-message="Required"
+				value="{{eventHost}}">
+			</paper-input>
+			<paper-input
+				class="short-detail"
+				label="Location"
+				required
+				auto-validate
+				error-message="Required"
+				value="{{eventLocation}}">
+			</paper-input>
+			<paper-input
+				class="long-detail"
+				label="Start"
+				required
+				auto-validate
+				error-message="Required"
+				value="{{eventStart}}"
+				type="datetime-local">
+			</paper-input>
+			<paper-input
+				class="long-detail"
+				label="End"
+				required
+				auto-validate
+				error-message="Required"
+				value="{{eventEnd}}"
+				type="datetime-local">
+			</paper-input>
+			<paper-textarea
+				class="long-detail"
+				label="Guest List"
+				required
+				auto-validate
+				error-message="Required"
+				value="{{eventGuests}}">
+			</paper-textarea>
+			<paper-input
+				class="long-detail"
+				label="Image URL (optional)"
+				value="{{eventImage}}">
+			</paper-input>
+			<paper-textarea
+				class="long-detail"
+				label="Extra Info (optional)"
+				value="{{eventInfo}}">
+			</paper-textarea>
+			<div class="padded">
+				<paper-button raised on-tap="close">Cancel</paper-button>
+				<paper-button id="createButton" raised disabled="[[!formValid]]" on-tap="submit">Create</paper-button>
+			</div>
 		</paper-dialog>
 	</template>
 
@@ -23,8 +123,111 @@
 
 		is: 'meetup-new-event',
 
+		properties: {
+			eventTitle: {
+				type: String,
+				value: '',
+				notify: true
+			},
+			eventImage: {
+				type: String,
+				value: '',
+				notify: true
+			},
+			eventType: {
+				type: String,
+				value: '',
+				notify: true
+			},
+			eventHost: {
+				type: String,
+				value: '',
+				notify: true
+			},
+			eventStart: {
+				type: String,
+				value: '',
+				notify: true
+			},
+			eventEnd: {
+				type: String,
+				value: '',
+				notify: true
+			},
+			eventGuests: {
+				type: String,
+				value: '',
+				notify: true
+			},
+			eventLocation: {
+				type: String,
+				value: '',
+				notify: true
+			},
+			eventInfo: {
+				type: String,
+				value: '',
+				notify: true
+			},
+			formValid: {
+				type: Boolean,
+				notify: true
+			}
+		},
+
+		ready: function() {
+			this.formValid = false;
+		},
+
+		observers: [
+			'_validityCheck(eventTitle, eventType, eventHost, eventStart, eventEnd, eventGuests, eventLocation)'
+		],
+
 		open: function() {
-			return this.$.dialog.open();
+			return this.$.newDialog.open();
+		},
+
+		close: function() {
+			this.eventTitle = '';
+			this.eventImage = '';
+			this.eventType = '';
+			this.eventHost = '';
+			this.eventStart = '';
+			this.eventEnd = '';
+			this.eventGuests = '';
+			this.eventLocation = '';
+			this.eventInfo = '';
+			return this.$.newDialog.close();
+		},
+
+		submit: function(e, detail) {
+			var self = this;
+			this.fire('submit', {
+				title: self.eventTitle,
+				image: self.eventImage,
+				type: self.eventType,
+				host: self.eventHost,
+				start: self.eventStart,
+				end: self.eventEnd,
+				guests: self.eventGuests,
+				location: self.eventLocation,
+				info: self.eventInfo
+			}, {bubbles: false});
+
+			return this.close();
+		},
+
+		_validityCheck: function(eventTitle, eventType, eventHost, eventStart, eventEnd, eventGuests, eventLocation) {
+			var args = Array.prototype.slice.call(arguments);
+			var argsLength = args.length;
+
+			for (var i = 0; i < argsLength; i++) {
+				if (args[i] === '') {
+					return this.formValid = false;
+				}
+			}
+
+			return this.formValid = true;
 		}
 
 	});
