--- a/index.html
+++ b/index.html
@@ -31,5 +31,6 @@
         navigator.serviceWorker.register('/service-worker.js');
       }
     </script>
+    <script src="/bower_components/moment/moment.js"></script>
   </body>
 </html>
