Complete event create, edit, and delete functionality

--- a/src/meetup-event-container.html
+++ b/src/meetup-event-container.html
@@ -78,7 +78,7 @@ Modified version of paper-card component, part of the Polymer Project.
     </style>
 
     <div class="header">
-      <iron-image hidden$="[[!image]]" src="[[image]]" preload$="[[preloadImage]]" fade$="[[fadeImage]]"></iron-image>
+      <iron-image hidden$="[[!image]]" src="[[image]]" alt="Event Image" preload$="[[preloadImage]]" fade$="[[fadeImage]]"></iron-image>
       <div hidden$="[[!heading]]" class$="[[_computeHeadingClass(image)]]">[[heading]]</div>
     </div>
 
